@@ -1,6 +1,6 @@
-Date: 2025-05-21
+Date: 2025-05-22
 Package: CHNOSZ
-Version: 2.1.0-73
+Version: 2.1.0-74
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
